Bug 60075 - FILEOPEN: File containing SVG attached to a connector closes immediately
Summary: FILEOPEN: File containing SVG attached to a connector closes immediately
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.1.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: David Tardon
URL:
Whiteboard: target:4.1.0 target:4.0.5
Keywords:
: 60490 61549 67453 67687 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-01-30 15:29 UTC by Cédric Bosdonnat
Modified: 2013-08-02 22:29 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:


Attachments
minimum file showing the problem (98.24 KB, application/vnd.oasis.opendocument.presentation)
2013-01-30 15:29 UTC, Cédric Bosdonnat
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cédric Bosdonnat 2013-01-30 15:29:50 UTC
Created attachment 73935 [details]
minimum file showing the problem

To reproduce:
  * Create new presentation
  * Insert SVG picture inside
  * Create another shape
  * Link them together with a connector line
  * Save the file
  * Open it once again

Result: a new window opens, and immediately closes before the file could be rendered. It looks like a crash, but isn't as the application is still running.

Expected: open the file
Comment 1 Jean-Baptiste Faure 2013-01-31 05:31:33 UTC
Reproducible with Version 4.0.1.0+ (Build ID: 05d97f486fc1db564d9c7b372ba2e7a867502c8) under Ubuntu 12.04 x86-64

Best regards. JBF
Comment 2 Julien Nabet 2013-02-07 22:21:08 UTC
Comment on attachment 73935 [details]
minimum file showing the problem

mimetype fixed
Comment 3 Julien Nabet 2013-02-07 22:25:30 UTC
On pc Debian x86-64 with master sources updated today, I just opened the file attached but it didn't close.
However, nothing appears and I noticed this in console logs:
warn:legacy.tools:5174:1:xmloff/source/draw/shapeimport.cxx:192: XMLShapeImportHelper::restoreConnections() was not called!

Cédric: should we put Thorsten or Radek on cc?
Comment 4 Julien Nabet 2013-02-08 18:14:51 UTC
Radek/Thorsten: put you in cc after all since it's in Impress
Comment 5 Julien Nabet 2013-02-08 18:16:47 UTC
*** Bug 60490 has been marked as a duplicate of this bug. ***
Comment 6 oconnor.stephen 2013-02-10 22:58:53 UTC
Same issue in Draw. Insert two SVG images and connect them with a connector. File will no longer open.
Comment 7 Thorsten Behrens (allotropia) 2013-02-21 20:08:50 UTC
This fails in svx/source/unodraw/unoshape.cxx:2290, when restoreConnections() tries to set the EndShape attribute - which in this file is a draw:frame (the trick to have both svm and svg file for one pic). And the SvxShape's GraphicShape seems vanished at that point.
Comment 8 freedesktop 2013-04-19 12:03:47 UTC
Experiencing the same issue with 4.0.2.2 release on Windows.
Comment 9 David Tardon 2013-05-02 13:58:43 UTC
SdXMLFrameShapeContext passes its attribute list to all nested images. That means they all try to register themselves with the same ID in SdXMLShapeContext::AddShape, but of course only the first one succeeds. The problem is that this might not be the shape that is actually selected (as in this case, where the first one is PNG, but multiImageImportHelper::solveMultipleImages selects the second one, which is SVG).
Comment 10 Commit Notification 2013-05-03 08:37:39 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=30b248dfe5bfb8a0649e36f22c943b3feb2f1385

fdo#60075 open drawings with connector attached to SVG



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2013-05-03 13:25:05 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4f4f450eaf9dad85d28fcd58b01c0f51ff0bd5ef

fdo#60075 need to return context when available



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Wenqing Zhou 2013-05-04 22:06:12 UTC
Still reproduced on daily build: Version 4.0.4.0+ (Build ID: 19e60e1a0507e041bbbbd2bf639782e990f7a55)
TinderBox: MacOSX-Intel@27-OSX_10.7.0-gcc_4.2.1_llvm, Branch:libreoffice-4-0, Time: 2013-05-03_14:30:25
Comment 13 Julien Nabet 2013-05-05 06:45:01 UTC
Wenging Zhou: it's fixed on 4.1 branch so it'll be only on 4.1.0 for the moment (see target on Whiteboard of this bugtracker).

I don't know if the fixes can be cherry-picked on 4.0 branch
Comment 14 David Tardon 2013-05-06 08:15:01 UTC
(In reply to comment #13)
> I don't know if the fixes can be cherry-picked on 4.0 branch

They can--I just haven't done it yet
Comment 15 Thorsten Behrens (allotropia) 2013-05-15 09:25:58 UTC
Related: bug 64512
Comment 16 David Tardon 2013-07-19 11:41:26 UTC
*** Bug 61549 has been marked as a duplicate of this bug. ***
Comment 17 Commit Notification 2013-07-19 14:13:03 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=31c3ae3e367bb3403935ac04a134771d3c8096a1&h=libreoffice-4-0

fdo#60075 open drawings with connector attached to SVG


It will be available in LibreOffice 4.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 18 David Tardon 2013-07-29 08:35:56 UTC
*** Bug 67453 has been marked as a duplicate of this bug. ***
Comment 19 Marcus Schweda 2013-08-02 22:29:14 UTC
*** Bug 67687 has been marked as a duplicate of this bug. ***